--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "fixed",
     "version": "1.0.0",
     "root": "arale",
+    "tag": "utility",
     "description": "实现元素跟随滚动的效果。",
     "homepage": "http://aralejs.org/fixed/",
     "repository": {
