--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "license": "MIT",
     "spm": {
         "alias": {
-            "$": "$"
+            "$": "$",
+            "events": "arale/events/1.1.0/events"
         },
         "output": ["fixed.js"]
     },
