--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
     "keywords": ["utility"],
     "description": "实现元素跟随滚动的效果。",
     "homepage": "http://aralejs.org/sticky/",
+    "author": "乔花 <shengyan1985@gmail.com>",
+    "maintainers": [
+        "乔花 <shengyan1985@gmail.com>",
+        "偏右 <afc163@gmail.com>"
+    ],
     "repository": {
         "type": "git",
         "url": "https://github.com/aralejs/sticky"
