--- a/package.json
+++ b/package.json
@@ -1,28 +1,36 @@
 {
-    "family": "arale",
-    "name": "sticky",
-    "version": "1.3.1",
-    "keywords": ["utility"],
-    "description": "实现元素跟随滚动的效果。",
-    "homepage": "http://aralejs.org/sticky/",
-    "author": "乔花 <shengyan1985@gmail.com>",
-    "maintainers": [
-        "乔花 <shengyan1985@gmail.com>",
-        "偏右 <afc163@gmail.com>"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "https://github.com/aralejs/sticky"
+  "name": "arale-sticky",
+  "version": "1.4.0",
+  "keywords": [
+    "utility"
+  ],
+  "description": "实现元素跟随滚动的效果。",
+  "homepage": "http://aralejs.org/sticky/",
+  "author": "乔花 <shengyan1985@gmail.com>",
+  "maintainers": [
+    "乔花 <shengyan1985@gmail.com>",
+    "偏右 <afc163@gmail.com>"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/aralejs/sticky"
+  },
+  "bugs": {
+    "url": "https://github.com/aralejs/sticky/issues"
+  },
+  "license": "MIT",
+  "spm": {
+    "main": "index.js",
+    "dependencies": {
+      "jquery": "1.7.2"
     },
-    "bugs": {
-        "url": "https://github.com/aralejs/sticky/issues"
+    "devDependencies": {
+      "expect.js": "0.3.1",
+      "sinon": "1.6.0"
     },
-    "license": "MIT",
-    "spm": {
-        "alias": {
-            "$": "$"
-        },
-        "output": ["sticky.js"]
-    },
-    "tests": ["sticky"]
+    "buildArgs": "--ignore jquery"
+  },
+  "tests": [
+    "sticky"
+  ]
 }
